--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,197 @@
-body,
+body {
+  margin-left: 4%;
+  margin-right: 4%;
+  margin-top: 4%;
+  margin-bottom: 0;
+  padding: 0;
+  font-family: 'Questrial', sans-serif;
+  background-color: lightskyblue;
+  color:black;
+  /*background-image: url(/images/pastel.jpg);
+  background-repeat: no-repeat;
+  background-size: 2000px;*/
+  
+}
+
+.contact{
+  background-color: lightpink;
+}
+
+.about{
+  background-color: palegoldenrod;
+}
+
+.fun {
+  background-color: lightblue;
+}
+
+h1 {
+  font-size: 54px;
+  margin-left: 4%;
+  text-shadow: 2px 2px 2px gray;
+}
+
+h2 {
+  font-size: 30px;
+  margin-left: 4%;
+  margin-right: 4%;
+  color: white;
+  text-shadow: 2px 2px 2px gray;
+}
+
+h3 {
+  font-size: 20px;
+  margin-left: 4%;
+  margin-right: 4%;
+
+}
+
+h4{
+  font-size: 35px;
+}
+
+p {
+  margin-left: 4%;
+  margin-right: 4%;
+}
+
+ul.nav {
+  list-style: none;
+  float: right;
+  margin-right: 2%;
+}
+
+ul.nav li.nav{
+  display: inline-block;
+  /*margin-top: 20px;*/
+}
+
+ul.nav li.nav a.nav{
+  text-decoration: none;
+  color: black;
+  padding: 7px 20px;
+  border: 1px solid black;
+  margin-right: 15px;
+  /*transition: 0.5s ease;*/
+}
+
+ul.nav li.nav a.nav:hover{
+  background-color: black;
+  color: white;
+}
+
+.me {
+  margin-top: 8%;
+  display: block;
+  margin-left: 10%;
+}
+
+.intro {
+  margin-top: 8%;
+  margin-right: 10%;
+  margin-left: 45%;
+}
+
+
+/* All the below code is from w3schools.com */
+
+.column {
+  float: left;
+  width: 30%;
+  padding: 15px;
+  border-collapse: collapse;
+  border: 5px;
+	justify-content: center;
+  margin-left: 8%;
+  margin-right: 9%
+  
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.flip-card { 
+  background-color: transparent;
+  width: 360px;
+  height: 260px;
+  perspective: 1000px; 
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color:lightgoldenrodyellow;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: lightgoldenrodyellow;
+  color: black;
+  transform: rotateY(180deg);
+}
+
+ul.exp {
+  list-style-type: '>  ';
+  column-count: 2;
+  text-align: left;
+}
+
+li.exp {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.whydali{
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.imgcenter {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+figcaption{
+  margin-left: 10%;
+  margin-right: 10%;
+  text-align: center;
+  color: gray;
+  font-size: 12px;
+}
+
+
+/*body,
 head {
   margin-left: 10%;
   margin-right: 10%;
@@ -7,13 +200,13 @@ head {
   width: 80%;
   height: 98%;
   background: linear-gradient(white, skyblue);
+  font-family: 'Questrial', sans-serif;
 }
 
 h1 {
   margin-top: 10%;
   margin-bottom: 10%;
   font-size: 45px;
-  font-family: "Didot", serif;
   text-shadow: 2px 2px 2px gray;
   color: black;
 }
@@ -110,7 +303,7 @@ li a.nav, a.top{
 }
 
 li a.nav:hover, a.top:hover {
-  /*background-color: white;*/
+  /*background-color: white;
   color: palevioletred;
 }
 
@@ -135,4 +328,4 @@ section {
   text-align: center;
   font-weight: bold;
   font-size: 20px;
-}
+} */
